FIX: Menu should be behind the popup overlay

--- a/src/component/Menu.css
+++ b/src/component/Menu.css
@@ -2,7 +2,7 @@ nav {
 	background: #009fe3 !important;
 	font-family: "Fjalla One", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
-    z-index: 300;
+    z-index: 300 !important;
 }
 
 .Menu-log-out-nav-item {
